--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "matspy"
-version = "0.4.2"
+version = "0.5"
 description="Sparse matrix spy plot, HTML, and LaTeX rendering with Jupyter integration."
 readme = "README.md"
 authors = [
@@ -28,4 +28,4 @@ homepage = "https://github.com/alugowski/matspy"
 repository = "https://github.com/alugowski/matspy"
 
 [project.optional-dependencies]
-test = ["pytest", "scipy", "matplotlib", "html5lib"]
+test = ["pytest", "scipy", "matplotlib", "html5lib", "matrepr"]
