--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,17 @@ jobs:
       if: ${{ !contains(matrix.python-version, 'pypy') }}  # no scipy wheels for pypy
       run: pip install pytest numpy matplotlib pytest-subtests html5lib scipy
 
-    - name: Python Test without Jupyter
+    - name: Test only scipy
+      if: ${{ !contains(matrix.python-version, 'pypy') }}  # no scipy wheels for pypy
+      run: pytest
+
+    - name: Install python-graphblas
+      if: ${{ !contains(matrix.python-version, 'pypy') && matrix.python-version != '3.7' }}  # no wheels for pypy and old python
+      run: |
+        pip install suitesparse-graphblas==7.4.4.1a1
+        pip install python-graphblas
+
+    - name: Test without Jupyter
       if: ${{ !contains(matrix.python-version, 'pypy') }}  # no scipy wheels for pypy
       run: pytest
 
@@ -39,11 +49,11 @@ jobs:
       if: ${{ !contains(matrix.python-version, 'pypy') }}  # no scipy wheels for pypy
       run: pip install jupyter
 
-    - name: Python Test with Jupyter
+    - name: Test with Jupyter
       if: ${{ !contains(matrix.python-version, 'pypy') }}  # no scipy wheels for pypy
       run: pytest
 
-    - name: Python Test with Coverage
+    - name: Test with Coverage
       if: ${{ contains(matrix.os, 'ubuntu') && !contains(matrix.python-version, 'pypy') }}
       run: |
         pip install pytest-cov
