--- a/codecov.yml
+++ b/codecov.yml
@@ -1,2 +1,9 @@
 coverage:
   range: 70..90
+  status:
+    project:
+      default:
+        informational: true
+    patch:
+      default:
+        informational: true
