--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -2,6 +2,15 @@ name: wheels
 
 on:
   workflow_dispatch:
+    inputs:
+      # Manual dispatch allows optional upload of wheels to PyPI
+      upload_dest:
+        type: choice
+        description: Upload wheels to
+        options:
+          - No Upload
+          - PyPI
+          - Test PyPI
   release:
     types:
       - published
@@ -9,6 +18,10 @@ on:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
+
+permissions:
+  # For PyPI Trusted Publisher
+  id-token: write
 
 jobs:
   publish_PyPI:
@@ -29,13 +42,16 @@ jobs:
       - name: Check
         run: pipx run twine check dist/*
 
+      # Upload to PyPI
       - uses: pypa/gh-action-pypi-publish@release/v1
+        if: github.event_name == 'release' || (github.event_name == 'workflow_dispatch' && github.event.inputs.upload_dest == 'PyPI')
         with:
-          # PyPI does not allow replacing a file. Without this flag the entire action fails if even a single duplicate exists.
-          skip-existing: true
           verbose: true
-          # Real PyPI:
           password: ${{ secrets.PYPI_API_TOKEN }}
-          # Test PyPI:
-#          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-#          repository-url: https://test.pypi.org/legacy/
+
+      # Upload to Test PyPI
+      - uses: pypa/gh-action-pypi-publish@release/v1
+        if: github.event_name == 'workflow_dispatch' && github.event.inputs.upload_dest == 'Test PyPI'
+        with:
+          verbose: true
+          repository-url: https://test.pypi.org/legacy/
