--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,20 +27,18 @@ jobs:
     - name: Test minimums
       run: pytest
 
-    - name: Install SciPy
-      # --only-binary disables compiling the package from source if a binary wheel is not available, such as PyPy
-      run: pip install --only-binary ":all:" scipy || true
-
-    - name: Install python-graphblas
-      if: ${{ !contains(matrix.python-version, 'pypy') && matrix.python-version != '3.7' }}  # no wheels for PyPy or old Python
+    - name: Install optional dependencies
+      # --only-binary disables compiling the package from source if a binary wheel is not available, such as old Python or PyPy
       run: |
-        pip install suitesparse-graphblas==7.4.4.1a1
-        pip install python-graphblas
-
-    - name: Install pydata sparse
-      if: ${{ !contains(matrix.python-version, 'pypy') && matrix.python-version != '3.7' }}  # no wheels for PyPy or old Python
-      run: |
-        pip install sparse
+        echo ""
+        echo "=== Install SciPy ============================="
+        pip install --only-binary ":all:" scipy || true
+        echo ""
+        echo "=== Install python-graphblas =================="
+        pip install --only-binary ":all:" python-graphblas || true
+        echo ""
+        echo "=== Install PyData/Sparse ====================="
+        pip install --only-binary ":all:" sparse || true
 
     - name: Test without Jupyter
       run: pytest
