--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "matspy"
-version = "0.7.1"
+version = "1.0.0"
 description="Sparse matrix spy plot and sparkline renderer that works with Jupyter."
 readme = "README.md"
 authors = [
@@ -13,8 +13,7 @@ dependencies = [
 requires-python = ">=3.7"
 
 classifiers = [
-#    "Development Status :: 5 - Production/Stable",
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Science/Research",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: BSD License",
