--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -62,5 +62,6 @@ jobs:
       if: ${{ contains(matrix.os, 'ubuntu') }}
       uses: codecov/codecov-action@v4
       with:
+        fail_ci_if_error: true
+        verbose: true
         token: ${{ secrets.CODECOV_TOKEN }}
-        directory: matspy
